# Coffemodoro

./: .gitignore  LICENSE  README.md  THIRD_PARTY_LICENSES  coffemodoro.desktop  install.sh  main.py  pyproject.toml  uninstall.sh
coffemodoro/: app.py
coffemodoro/core/: database.py  exporter.py  notifier.py  timer.py
coffemodoro/ui/: animation.py  projects_view.py  reassign_dialog.py  session_dialog.py  settings_view.py  timer_view.py  tray.py  window.py
tests/: test_database.py  test_exporter.py  test_notifier.py  test_timer.py
