[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "coffemodoro"
version = "0.1.0"
requires-python = ">=3.11"

[project.scripts]
coffemodoro = "coffemodoro.app:main"

[tool.setuptools.package-data]
coffemodoro = ["assets/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
